--- a/war/index.html
+++ b/war/index.html
@@ -23,6 +23,9 @@
        <tr>
       <td><a href="stockdetails">Stock Details</a></td>
       </tr>
+       <tr>
+      <td><a href="portfolio">Exercise 5 show portfolio</a></td>
+      </tr>
     </table>
   </body>
 </html>
